# TagStudioPlus

./: CMakeLists.txt  sitemap.xml  tagstudio.spec
cmake/: GlobMove.cmake  GlobRemove.cmake  PythonCMakeConfig.cmake  python_cmake_config.py
python_env/: CMakeLists.txt
src/tagstudio/: CMakeLists.txt
src/tagstudio/qt/: main_menubar.py  main_window.py  ts_qt.py
src/tagstudioplus/: CMakeLists.txt  application.cpp  application.h  bindings.xml  cppswitch.h  main.cpp
